ui: fix reset icon too large when no fit scale icon present

--- a/app/assets/stylesheets/modules/heatmap-button.css.scss
+++ b/app/assets/stylesheets/modules/heatmap-button.css.scss
@@ -14,7 +14,7 @@
     margin-left: 20px;
   }
 
-  &:not(:first-of-type) {
+  &:not(.heatmap-button--fit-scale) {
     img {
       width: 11px;
     }
